k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: npw-deployment
  namespace: npw
  labels:
    app: npw
spec:
  replicas: 3 #根据情况定义副本数
  selector:
    matchLabels:
      app: npw
  template:
    metadata:
      labels:
        app: npw
    spec:
      containers:
        - name: nmid-sidecar #使用nmid作为npartword服务sidecar
          image: docker.io/hughnian/nmid:20 #这里的tag根据具体镜像tag取值
          command: ["/etc/service/run"]
          ports:
            - name: tcp
              containerPort: 6808
            - name: http
              containerPort: 6809
        - name: npartword
          image: docker.io/hughnian/npartword:1 #这里的tag根据具体镜像tag取值
          command: ["/etc/service/run"]
---
apiVersion: v1
kind: Service
metadata:
  name: npw-service
  namespace: npw
spec:
  selector:
    app: npw
  ports:
    - name: npw-tcp
      nodePort: 30688
      port: 6808
      protocol: TCP
      targetPort: 6808
    - name: npw-http
      nodePort: 30689
      port: 6809
      protocol: TCP
      targetPort: 6809
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/description: npw-service-http
  name: npw-service-http
  namespace: npw
spec:
  defaultBackend:
    service:
      name: npw-service
      port:
        number: 6809
  rules:
    - host: npw.mytest.com #使用自己相应域名
      http:
        paths:
          - backend:
              service:
                name: npw-service
                port:
                  number: 6809
            path: /
            pathType: Prefix
